--- a/html/directivaVFor.html
+++ b/html/directivaVFor.html
@@ -16,7 +16,7 @@
         
         <div id="myAplicacion2">
 
-            <h4>Estudiantes UCE</h4>
+            <h4 v-if="false">Estudiantes UCE</h4>
             <input type="text" v-model="nombre" v-on:keypress.enter="agregarEstudiante2">
             <h1>{{nombre}}</h1>
             <hr>
@@ -39,7 +39,8 @@
            <ul>
             <li v-for="({nombre,apellido}, index) in estudiantes">
                 <span>{{index}}-{{nombre}}</span>
-                <blockquote>{{index}}-{{apellido}}</blockquote>
+                <blockquote v-if="apellido!==undefined">Apellido1:{{apellido}}</blockquote>
+                <blockquote v-show="apellido!==undefined">Apellido2:{{apellido}}</blockquote>
             </li>
        </ul>
 
